--- a/src/index.css
+++ b/src/index.css
@@ -61,9 +61,8 @@
   --question-cp-gradient: #d47ff9;
 
   --leetcode-primary: #ffa217;
-  
 
-  --linkedIn: #084F96;
+  --linkedIn: #084f96;
 }
 
 .dark {
