--- a/src/index.css
+++ b/src/index.css
@@ -9,33 +9,33 @@
   --card-foreground: #0a0a0a;
   --popover: #f5f5f5;
   --popover-foreground: #0a0a0a;
-  --primary: #00ccbb;
-  --primary-foreground: #14ffec;
+  --primary: #0479ff;
+  --primary-foreground: #0479ff;
   --secondary: #f5f5f5;
-  --secondary-foreground: #00ccbb;
+  --secondary-foreground: #0479ff;
   --muted: #e0e0e0;
-  --muted-foreground: #00ccbb;
-  --accent: #14ffec;
-  --accent-foreground: #00ccbb;
+  --muted-foreground: #0479ff;
+  --accent: #0479ff;
+  --accent-foreground: #0479ff;
   --destructive: #ff5252;
   --destructive-foreground: #ffffff;
   --border: #e0e0e0;
   --input: #e0e0e0;
-  --ring: #00ccbb;
+  --ring: #0479ff;
   --chart-1: #ff8c42;
-  --chart-2: #14ffec;
-  --chart-3: #00ccbb;
+  --chart-2: #0479ff;
+  --chart-3: #0479ff;
   --chart-4: #ffcc29;
   --chart-5: #f72585;
   --radius: 0.625rem;
   --sidebar: #e0e0e0;
   --sidebar-foreground: #0a0a0a;
-  --sidebar-primary: #00ccbb;
-  --sidebar-primary-foreground: #14ffec;
+  --sidebar-primary: #0479ff;
+  --sidebar-primary-foreground: #0479ff;
   --sidebar-accent: #e0e0e0;
-  --sidebar-accent-foreground: #00ccbb;
+  --sidebar-accent-foreground: #0479ff;
   --sidebar-border: #e0e0e0;
-  --sidebar-ring: #00ccbb;
+  --sidebar-ring: #0479ff;
   --heatmap-base: #4b4b4b62;
   --heatmap-1: #0d7d74;
   --heatmap-2: #1cc5b7;
@@ -72,32 +72,32 @@
   --card-foreground: #eeeeee;
   --popover: #212121;
   --popover-foreground: #eeeeee;
-  --primary: #14ffec;
-  --primary-foreground: #00ccbb;
+  --primary: #0479ff;
+  --primary-foreground: #0479ff;
   --secondary: #323232;
-  --secondary-foreground: #14ffec;
+  --secondary-foreground: #0479ff;
   --muted: #323232;
-  --muted-foreground: #14ffec;
-  --accent: #00ccbb;
-  --accent-foreground: #14ffec;
+  --muted-foreground: #0479ff;
+  --accent: #0479ff;
+  --accent-foreground: #0479ff;
   --destructive: #ff1744;
   --destructive-foreground: #ffffff;
   --border: #323232;
   --input: #323232;
-  --ring: #14ffec;
+  --ring: #0479ff;
   --chart-1: #ff8c42;
-  --chart-2: #14ffec;
-  --chart-3: #00ccbb;
+  --chart-2: #0479ff;
+  --chart-3: #0479ff;
   --chart-4: #ffcc29;
   --chart-5: #f72585;
-  --sidebar: #00ccbb;
-  --sidebar-foreground: #14ffec;
-  --sidebar-primary: #14ffec;
-  --sidebar-primary-foreground: #00ccbb;
+  --sidebar: #0479ff;
+  --sidebar-foreground: #0479ff;
+  --sidebar-primary: #0479ff;
+  --sidebar-primary-foreground: #0479ff;
   --sidebar-accent: #323232;
-  --sidebar-accent-foreground: #14ffec;
+  --sidebar-accent-foreground: #0479ff;
   --sidebar-border: #323232;
-  --sidebar-ring: #14ffec;
+  --sidebar-ring: #0479ff;
 }
 
 @theme inline {
