changed the hover radius of the pie chart

--- a/src/index.css
+++ b/src/index.css
@@ -45,10 +45,10 @@
   --heatmap-3: #82cfff;
   --heatmap-4: #e0e0e0;
 
-  --question-easy: #82CFFF;
-  --question-medium: #45B1FF;
-  --question-hard: #0479FF;
-  --question-cp: #205A9C;
+  --question-easy: #82cfff;
+  --question-medium: #45b1ff;
+  --question-hard: #0479ff;
+  --question-cp: #205a9c;
 
   --leetcode-primary: #45b1ff;
   --linkedIn: #023c7e;
