new pie colours

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@
   --heatmap-3: #82cfff;
   --heatmap-4: #e0e0e0;
 
-  --question-easy: #82cfff;
+  --question-easy: #aedefb;
   --question-medium: #45b1ff;
   --question-hard: #0479ff;
   --question-cp: #205a9c;
