--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @plugin 'tailwindcss-animate';
 @custom-variant dark (&:is(.dark *));
 :root {
-  --background: #e0e0e0;
+  --background: #D2DBE3;
   --foreground: #2b2b2b;
   --card: #45b1ff;
   --card-foreground: #2b2b2b;
@@ -55,7 +55,7 @@
 }
 
 .dark {
-  --background: #2b2b2b;
+  --background: #383838;
   --foreground: #e0e0e0;
   --card: #3a3a3a; /* Lighter than before */
   --card-foreground: #e0e0e0;
