--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @plugin 'tailwindcss-animate';
 @custom-variant dark (&:is(.dark *));
 :root {
-  --background: #b2dfff;
+  --background: #c5e5fc;
   --foreground: #2c2c2c;
   --card: #e0e0e0;
   --card-foreground: #2c2c2c;
